# aur-guard

./: COMPARISON.md  Cargo.toml  Makefile  README.md  SECURITY.md
packaging/: PKGBUILD
src/: aur.rs  cli.rs  config.rs  lib.rs  llm_optional.rs  main.rs  pkgbuild_parser.rs  report.rs  rules.rs  scanner.rs  source_fetcher.rs  wrapper.rs
tests/: integration_cli.rs
tests/fixtures/benign/: .SRCINFO  PKGBUILD  hello.sh
tests/fixtures/malicious-pipe/: PKGBUILD  aur-guard-malicious-pipe.install  local.sh
