[package]
name = "aur-guard"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Static AUR package security auditing CLI"
repository = "https://github.com/y-bgmpst/aur-guard"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
toml = "0.9"
walkdir = "2.5"
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2.1"
insta = "1.43"
predicates = "3.1"
proptest = "1.9"
